fix(auth): enable oauth2 session state and allow prod origins